fixed 1.5 bug